[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interface/HealthBar.gd" type="Script" id=1]
[ext_resource path="res://Interface/textures/health_under.png" type="Texture" id=2]
[ext_resource path="res://Interface/textures/health_progress_flash.png" type="Texture" id=3]

[node name="HealthBar" type="MarginContainer"]
margin_right = 100.0
margin_bottom = 10.0
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Background" type="TextureProgress" parent="."]
margin_right = 100.0
margin_bottom = 10.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="Progress" type="TextureProgress" parent="."]
margin_right = 100.0
margin_bottom = 10.0
value = 100.0
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.890196, 0.458824, 0.458824, 1 )
nine_patch_stretch = true

[node name="FlashTimer" type="Timer" parent="."]
one_shot = true

[node name="ShowTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="timeout" from="ShowTimer" to="." method="_on_ShowTimer_timeout"]
